--- a/demo/customer-sdk-demo.html
+++ b/demo/customer-sdk-demo.html
@@ -61,12 +61,18 @@
       // we can call BringgSDK.disconnect() if we are not using a rating screen for example.
     }
 
+    function onTaskCancelledCb(info) {
+      console.log('onTaskCancelledCb', info);
+      // task ended
+      // we can call BringgSDK.disconnect() if we are not using a rating screen for example.
+    }
+
     function onConnect(){
       console.log('onConnect');
       BringgSDK.watchOrder({
         order_uuid: my_order_uuid
       }, function (result) {
-        console.log('watch order result: ' + JSON.stringify(result));
+        console.log('watch order result: ', result);
         if (result && result.shared_location) {
           console.log('calling init bringg with ' + result.share_uuid);
           BringgSDK.initializeBringg({share_uuid: result.share_uuid}, onBringgInitSuccess, onBringgInitFailed);
@@ -106,7 +112,8 @@
       // example for setting callbacks implicitly
       BringgSDK.setEventCallback({
         'taskRatedCb': onTaskRatedCb,
-        'taskEndedCb': onTaskEndedCb
+        'taskEndedCb': onTaskEndedCb,
+        'taskCancelledCb': onTaskCancelledCb
       });
     }
   </script>
