--- a/demo/customer-sdk-demo.html
+++ b/demo/customer-sdk-demo.html
@@ -5,7 +5,7 @@
   <script src="../bower_components/socket.io-client/socket.io.js"></script>
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script src="../bower_components/bringg-js-sdk/BringgSDK.js"></script>
-  <script src="../demo/demoApp.js"></script>
+  <script src="../demo/DemoApp.js"></script>
   <script src="../demo/DemoConfig.js"></script>
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
