Changes from PR

--- a/demo/customer-sdk-demo.html
+++ b/demo/customer-sdk-demo.html
@@ -69,11 +69,11 @@
           <label for="share_uuid">Share UUID</label>
           <input type="text" id="share_uuid" class="form-control">
         </div>
-        <div class="form-group">
-          <label for="customer_access_token">Customer Access Token</label>
-          <input type="text" class="form-control" id="customer_access_token">
-        </div>
-        <p class="help-block" style="color: red;">**Any two of the tree values are required.</p>
+        <!--<div class="form-group">-->
+          <!--<label for="customer_access_token">Customer Access Token</label>-->
+          <!--<input type="text" class="form-control" id="customer_access_token">-->
+        <!--</div>-->
+        <!--<p class="help-block" style="color: red;">**Any two of the tree values are required.</p>-->
         <button class="btn btn-default pull-left" id="requestPhone">Request Driver Phone</button>
         <button class="btn btn-default pull-right" id="connectButton">Connect</button>
       </form>
