Remove underscore as dependency
we use it only in demo and client-apps that use lodash are doomed.

--- a/demo/customer-sdk-demo.html
+++ b/demo/customer-sdk-demo.html
@@ -4,7 +4,7 @@
   <title>Demo SDK use</title>
   <script src="../bower_components/socket.io-client/socket.io.js"></script>
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="../bower_components/underscore/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
   <script src="../BringgSDK.js"></script>
   <script src="../demo/customer-sdk-demo.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
